<resources>
    <string name="app_name">Lab6</string>
    <string name="hello_message">Here are my widgets:</string>
    <string name="ButtonText">BUTTON</string>
    <string name="checkout_text">Check this out!</string>
    <string name="switch_text">Switch on/off</string>
    <string name="edit_text_hint">Type your answer in here</string>
    <string name="email1">Enter your email address:</string>
    <string name="inemail">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="login">Login</string>
    <string name="profile">Your profile</string>
    <string name="pname">Your name:</string>
    <string name="hname">Enter your name</string>
    <string name="pemail">Your email</string>
    <string name="hemail">Enter your email</string>
    <string name="ppicture">Your picture:</string>
    <string name="click">Click the button above to take a picture</string>
    <string name="goToChart">Go to chart</string>
    <string name="send">Send</string>
    <string name="typeHere">Type here</string>
    <string name="receive">Receive</string>
    <string name="currTemp">currnet temp: </string>
    <string name="minTemp">min temp: </string>
    <string name="maxTemp">max temp: </string>
    <string name="UV_rating">UVRATING: </string>
    <string name="weather_forecast">weather forecast</string>
    <string name="wind_speed">wind speed: </string>
    <string name="detele_this_message">Delete</string>

</resources>
