<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/email"
        android:layout_width='match_parent'
        android:layout_height='wrap_content'
        android:text="@string/email1"/>

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/inemail"/>

    <TextView
        android:id="@+id/password"
        android:layout_width='match_parent'
        android:layout_height='wrap_content'
        android:text="@string/password"/>

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/login"/>

</LinearLayout>
