<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize= "30dp"/>

    <Button
        android:id="@+id/button1"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:layout_alignParentLeft="true"
        android:text="@string/ButtonText"/>

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_marginLeft="5dp"
        android:layout_height="70dp"
        android:layout_alignTop="@id/button1"
        android:scaleType="fitCenter"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:src="@drawable/flag" />



    <Switch
        android:id="@+id/switch1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:text="@string/switch_text" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_alignBottom="@+id/switch1"
        android:text="@string/checkout_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:hint="@string/edit_text_hint"
        android:inputType="textPersonName"/>
</RelativeLayout>
