<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff66"
    android:orientation="vertical"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/current_weather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:hint="@string/currTemp" />

    <TextView
        android:id="@+id/min_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/minTemp" />

    <TextView
        android:id="@+id/max_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/maxTemp" />
    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/wind_speed" />
    <TextView
        android:id="@+id/UV_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/UV_rating" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />


</LinearLayout>